[package]
name = "FaceRust-Messenger"
version = "0.1.0"
authors = ["Javi Facu Nacho"]
edition = "2018"

[[bin]]
name = "client"
path = "src/Client/client_main.rs"

[[bin]]
name = "server"
path = "src/Server/server_main.rs"

[[bin]]
name = "r_owneship_1"
path = "ejemplos/Ownership/ownership_1.rs"

[[bin]]
name = "r_owneship_2"
path = "ejemplos_facu/Ownership/ownership_2.rs"

[[bin]]
name = "r_concurrency_1"
path = "ejemplos_facu/Concurrency/concurrency_1.rs"

[[bin]]
name = "concurrencia1"
path = "ejemplos_javi/concurrencia_1.rs"

[[bin]]
name = "concurrencia2"
path = "ejemplos_javi/concurrencia_2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bufstream = "0.1.4"
termion = "1.1.1"

